Bug 592184 - TM: XPC_WN_CallMethod has to set the right compartment r=gal